Add responsive design for button groups

--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,14 @@ textarea {
     .task-row {
         padding: 15px;
     }
+
+    .button-group {
+        flex-direction: column;
+    }
+
+    .button-option {
+        width: 100%;
+    }
 }
 
 /* Loading state */
